Kind of Drawing Canvas
I've worked until my fingers are nubs. :-1:  Anyway. It doesn't do much
yet but all the background stuff is there. I just need to figure out the
color changer. :)  Gonna keep working hard. Might not et everything done
by Wednesday morning but I'm going to really try hard. . Bed time now.

--- a/Telephone-Pictionary/res/layout/activity_main.xml
+++ b/Telephone-Pictionary/res/layout/activity_main.xml
@@ -40,4 +40,14 @@
         android:scaleType="centerInside"
         android:src="@drawable/telephonetitle" />
        
+     <Button
+        android:id="@+id/drawingcanvastemp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/explanationbutton"
+        android:layout_marginTop="28dp"
+        android:text="Draw Canvas Temp" 
+        android:onClick="drawCanvasTemp"/>
+     
 </RelativeLayout>
