Ooh, I didn't realize I could commit from Eclipse. Let's see if this works. I only changed a bit of Explanation.

--- a/Telephone-Pictionary/res/layout/activity_explanation.xml
+++ b/Telephone-Pictionary/res/layout/activity_explanation.xml
@@ -12,6 +12,7 @@
         android:id="@+id/Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scrollbars="vertical"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/TelephonePic"
         android:text="Telephone pictionary is. There should be a better way to display this. A cuter way for text. Lets implement a scroll bar. Lets remove the action bar. Do we like the grey? We can relayout later. "
@@ -39,9 +40,10 @@
         android:id="@+id/Instructions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scrollbars="vertical"
         android:layout_alignLeft="@+id/HowToUse"
         android:layout_below="@+id/HowToUse"
-        android:text="Press the damn buttons"
+        android:text="Start the new game using the Start Game button. Select how many players. The first player will type a phrase on a Card then select the Pass button. The player will then pass the device onto the next player. This player will then draw a picture depicting the phrase and pass it on. Play will continue alternating between the player typing a phrase from the picture and the player drawing a picture from a phrase until all the device has traveled to all players."
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
