--- a/Telephone-Pictionary/res/layout/activity_main.xml
+++ b/Telephone-Pictionary/res/layout/activity_main.xml
@@ -24,12 +24,32 @@
         android:id="@+id/joinGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/hostGame"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/joingame"
+        android:onClick="joinGame"/>
+        
+	<ImageButton
+        android:id="@+id/hostGame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="19dp"
-        android:background="@drawable/joingame"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/hostgame"
         android:onClick="newGame"/>
-
+        
+	<ImageButton
+        android:id="@+id/passAndPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/joinGame"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/passandplay"
+        android:onClick="passAndPlay"/>
+	
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
