Still Working on Color, Canvas Finish
I commented some broken code out Christine in the activity main canvas
to test so don't be alarmed if everything is confused.

--- a/Telephone-Pictionary/res/layout/activity_main.xml
+++ b/Telephone-Pictionary/res/layout/activity_main.xml
@@ -19,15 +19,14 @@
         android:scaleType="centerInside"
         android:src="@drawable/telephonetitle" />
     
-    <ImageButton
+    <!-- ImageButton 
         android:id="@+id/hostGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:background="@drawable/hostgame"
-        android:onClick="newGame"/>
+        android:onClick="newGame"/> -->
         
     
     <ImageButton
@@ -41,7 +40,7 @@
         android:onClick="joinGame"/>
         
 	
-	<ImageButton
+	<!--  ImageButton
         android:id="@+id/passAndPlay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,7 +48,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:background="@drawable/passandplay"
-        android:onClick="newGame"/>
+        android:onClick="newGame"/> -->
 
     <ImageButton
         android:id="@+id/explanationbutton"
