--- a/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
@@ -33,6 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:contentDescription="@string/erase"
+            android:onClick="eraseImage"
             android:src="@drawable/erase"/>
             
   
@@ -62,6 +63,13 @@
     	   	android:layout_gravity="center"
     		android:orientation="horizontal">
     	   
+    	    <ImageButton
+           		android:id="@+id/back_button"
+           		android:layout_width="wrap_content"
+           		android:layout_height="fill_parent"
+           		android:contentDescription="@string/back"
+           		android:src="@drawable/back" />
+    	        	    
     		 <ImageButton
         	    android:id="@+id/save_button"
             	android:layout_width="wrap_content"
