Canvas Write is Working
:pray:  :pray: :pray: CANVAS WRITE IS WORKING :confetti_ball:
:confetti_ball: (kind of). We'll figure out how to store later. Giving
up on drawing canvas for tonight but whatevs. I have an idea of how to
do it but it would be tedious so I tthought I'd talk to you guys about
it tomorrow

--- a/Telephone-Pictionary/res/layout/activity_main.xml
+++ b/Telephone-Pictionary/res/layout/activity_main.xml
@@ -70,5 +70,14 @@
         android:layout_marginTop="28dp"
         android:text="Draw Canvas Temp" 
         android:onClick="drawCanvasTemp"/>
+
+     <Button
+         android:id="@+id/writingTemp"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_above="@+id/explanationbutton"
+         android:layout_toLeftOf="@+id/drawingcanvastemp"
+         android:text="Write Canvas Temp"
+         android:onClick="writeCanvasTemp" />
      
 </RelativeLayout>
