Dunno where save is saving to but it doesn't crash.
Buh-doop. Buh-doop. I fixed clear too.

--- a/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
+++ b/Telephone-Pictionary/res/layout/activity_canvas_drawer.xml
@@ -76,7 +76,7 @@
             	android:layout_height="fill_parent"
            		android:contentDescription="@string/save"
            		android:src="@drawable/save"
-           		android:onClick="saveToDevice"/>
+           		android:onClick="savetoDevice"/>
               
        	 	<ImageButton
            		android:id="@+id/send_button"
