--- a/Telephone-Pictionary/res/layout/activity_card_viewer.xml
+++ b/Telephone-Pictionary/res/layout/activity_card_viewer.xml
@@ -27,6 +27,10 @@
             android:src="@drawable/forward" />
     </LinearLayout>
 
-
+    <ImageView
+        android:id="@+id/prevCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         />
 
 </LinearLayout>
